src/main/metadata-au/objects/Lead_Priority_Score__mdt.object
<CustomObject>
    <fields>
        <fullName>Behavioural_group__c</fullName>
        <label>Behavioural group</label>
        <picklist>
            <picklistValues>
                <fullName>Revolver</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New to the brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attriter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Cars</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Record_Types__c</fullName>
        <label>Contract Record Types</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contrats_to_Lead__c</fullName>
        <label>Customer Contracts to Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enquiry_type__c</fullName>
        <label>Enquiry type</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nature_Of_Request__c</fullName>
        <label>Nature Of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Test Drive Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_OF_MBs__c</fullName>
        <label>Number OF MBs</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <label>Prospect</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_intent__c</fullName>
        <label>Purchase intent</label>
        <picklist>
            <picklistValues>
                <fullName>24 Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-4 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6+ months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_a_test_drive__c</fullName>
        <label>Requested a test drive</label>
        <picklist>
            <picklistValues>
                <fullName>Test Drive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive – Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive – Mercedes me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Priority Score</label>
    <pluralLabel>Lead Priority Scores</pluralLabel>
</CustomObject>  